--- a/about.html
+++ b/about.html
@@ -19,6 +19,8 @@
 
     <div class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"> <!--THis div contains both the banner and the main nav.  They need to be contained in one container so the formatting which is chared by both divs works.  class Navbar is a bootstrap class.  Expand lg means navbar horizontal when screen is large.  fixed top fixes the navbar to the top-->
       <div role="banner">
+
+
         <a class="skiptocontent" href="#maincontent">Skip to Content</a>
         <a class="navbar-brand mainlogo" href="index.html">AccessibilityWeb</a>
       </div>
@@ -38,7 +40,7 @@
           <a class="nav-link text-white" href="imagesandvideo.html">Images & Video</a> <!--text white colors text as white-->
         </li>
         <li class="nav-item"> <!--class Nav-item is a bootstrap class-->
-          <a class="nav-link text-white" href="forms.html">Forms</a> <!--text white colors text as white-->
+          <a class="nav-link text-white" href="widgets.html">widgets</a> <!--text white colors text as white-->
         </li>
         <li class="nav-item"> <!--class Nav-item is a bootstrap class-->
           <a class="nav-link text-white" href="windows.html">Windows</a> <!--text white colors text as white-->
@@ -107,15 +109,15 @@
             <p class="paragraphText"><strong>Landmarks & Regions:</strong> Pages are divided into landmarks and regions including banner, navigation, page contents, main, contentinfo and a number of page specific content regions.</p>
             <p class="paragraphText"><strong>Bypass Blocks:</strong> To navigate within pages more effectively, users can click on the links in the page contents section on the left hand side of the page. There is also a hidden skip to content link at the beginning of the page, which is read aloud by screen reading software and is visible on focus.</p>
             <p class="paragraphText"><strong>Resize:</strong> The page is designed to resize to a zoom of 400%.</p>
-            <p class="paragraphText"><strong>Aria Labels:</strong> On the forms page, aria labels are used to give more information about the form controls.</p>
-            <p class="paragraphText"><strong>Aria Live: </strong>Aria live is used on the forms page to inform screen reader users when information in the page is updated.</p>
+            <p class="paragraphText"><strong>Aria Labels:</strong> On the widgets page, aria labels are used to give more information about the form controls.</p>
+            <p class="paragraphText"><strong>Aria Live: </strong>Aria live is used on the widgets page to inform screen reader users when information in the page is updated.</p>
             <br />
             <p class="paragraphText">AccessibilityWeb also has a number of deliberate accessibility floors, to exemplify examples of poor design. These are:</p>
             <p class="paragraphText"><strong>Text Resize: </strong>On the Adjustments page in the Responsive Websites section, there is a portion of text that does not resize when the font size is changed.</p>
             <p class="paragraphText"><strong>Zoom: </strong>On the Adjustments page in the Responsive Websites section, there is a section of text that when zoomed, obscures another section of text.</p>
             <p class="paragraphText"><strong>No Alt Text: </strong>On the Image & Video page, there is an image of an apple without alt text.</p>
             <p class="paragraphText"><strong>Keyboard Trap: </strong>There is a keyboard trap (element where the user cannot navigate away using the TAB key once that element has the focus) on the Focus page.</p>
-            <p class="paragraphText"><strong>Two Scroll Bars: </strong>There are two scroll bars on the Windows page, one for the whole page and one for the PDF contained in a frame.</p>
+          <p class="paragraphText"><strong>Two Scroll Bars: </strong>There are two scroll bars on the Windows page, one for the whole page and one for the PDF contained in a frame.</p>
           </section>
         </div>
     </main>
