--- a/adjustments.html
+++ b/adjustments.html
@@ -35,7 +35,7 @@
           <a class="nav-link text-white" href="imagesandvideo.html">Images & Video</a> <!--text white colors text as white-->
         </li>
         <li class="nav-item"> <!--class Nav-item is a bootstrap class-->
-          <a class="nav-link text-white" href="forms.html">Forms</a> <!--text white colors text as white-->
+          <a class="nav-link text-white" href="widgets.html">Widgets</a> <!--text white colors text as white-->
         </li>
         <li class="nav-item"> <!--class Nav-item is a bootstrap class-->
           <a class="nav-link text-white" href="windows.html">Windows</a> <!--text white colors text as white-->
@@ -78,19 +78,19 @@
             <h2 class="headingTopPadding" id="textSize" tabindex="-1">Text Size</h2>
             <hr>
             <p class="paragraphText">The text size can be enlarged, without enlarging any of the other elements on the page. Sometimes this may provide a better user experience, if zooming in causes content to become difficult to read or navigate. Methods for changing the text size differ from browser to browser. Font sizes can be changed in the standard view in Chrome, Firefox, Internet Explorer and Safari. In Edge to change the font size, users need to change the view to Reading View. Reading View in Edge is not yet covered by AccessiblityWeb.</p>
-              <h3 class="exampleMarginLeft subcatTopMargin">Chrome Text Size</h3>
+              <h3 class="h3TopMargin">Chrome Text Size</h3>
               <p class="paragraphText" class="exampleMarginLeft">To change the text size in Chrome, go the more button (...) in the top right hand corner of the Chrome browser (or press and release the ALT key, then press the ENTER key), and choose settings from the menu. In the setting page, scroll or tab down to the appearance section and change the font size as needed in the font size drop down menu.</p>
               <img class="exampleMarginLeft" src="images/ChromeFontSizeSettings.png" alt="showing how to adjust the text size in the Chrome browser, as described above." height="439px" width="1000px"/>
-              <h3 class="exampleMarginLeft subcatTopMargin">Firefox Text Size</h3>
+              <h3 class="h3TopMargin">Firefox Text Size</h3>
               <p class="paragraphText" class="exampleMarginLeft">
                 To change the font size in Firefox, go to the more button on the top right of the browser (a ‘hamburger’ button with three horizontal lines). Then select 'Options' from the menu that appears. Alternatively press and releasing the ALT key, then press the T key, and then the O key will open the options menu.  Use the TAB key or scroll down to get to the ‘Language and Appearance’ section and activate the ‘Advanced’ button, which opens the font window. In the font window, first uncheck the ‘Allow pages to choose their own fonts, instead of your selections above’. Then click or SHIFT & TAB up to the ‘Minimum font size’ drop down menu and select a desired minimum font size.
               </p>
               <img class="exampleMarginLeft" src="images/FireFoxFontSizeSettings.png" alt="showing how to adjust the text size in the Firefox browser, as described above." height="825px" width="1000px"/>
-              <h3 class="exampleMarginLeft subcatTopMargin">Internet Explorer Text Size</h3>
+              <h3 class="h3TopMargin">Internet Explorer Text Size</h3>
               <p class="paragraphText" class="exampleMarginLeft">In Internet Explorer, to change the text size, first open the view menu by pressing the ALT + V key. Then either click on the ‘Text Size’ item or use the DOWN ARROW keys and press the ENTER key on ‘Text Size’. From there, click on the desired text size or navigate the text size options using the DOWN ARROW keys and press ENTER on the desired text size. </p>
               <img class="exampleMarginLeft" src="images/IEFontSizeSettings.png" alt="showing how to adjust the text size in the Internet Explorer browser, as described above." height="422px" width="496px"/>
 
-              <h3 class="exampleMarginLeft subcatTopMargin">Safari Text Size</h3>
+              <h3 class="h3TopMargin">Safari Text Size</h3>
               <p class="paragraphText" class="exampleMarginLeft">To change the minimum font size in Safari, click in the Safari menu at the top left of the screen, or open the Safari menu by pressing Fn CTRL F2 or CTRL F2. In the Safari menu, click on preferences, or use the DOWN ARROW keys to get to preferences and press ENTER. Click on the advanced tab, or use the TAB key to get to advanced and press the SPACE key. Then check the ‘Never use font sizes smaller than’ checkbox by clicking on the checkbox, or using the TAB key to get to the checkbox and pressing SPACE. Then in the drop down menu select a minimum font size, which can be done either by using the mouse, or using the TAB key to get to the drop down menu and using the UP & DOWN ARROW keys to change the value.</p>
               <img class="exampleMarginLeft" src="images/SafariFontSizeSettings.png" alt="showing how to adjust the text size in the Safari browser, as described above." height="460px" width="1056px"/>
           </section>
