--- a/focus.html
+++ b/focus.html
@@ -36,7 +36,7 @@
           <a class="nav-link text-white" href="imagesandvideo.html">Images & Video</a> <!--text white colors text as white-->
         </li>
         <li class="nav-item"> <!--class Nav-item is a bootstrap class-->
-          <a class="nav-link text-white" href="forms.html">Forms</a> <!--text white colors text as white-->
+          <a class="nav-link text-white" href="widgets.html">Widgets</a> <!--text white colors text as white-->
         </li>
         <li class="nav-item"> <!--class Nav-item is a bootstrap class-->
           <a class="nav-link text-white" href="windows.html">Windows</a> <!--text white colors text as white-->
