--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   <body>
     <div class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"> <!--THis div contains both the banner and the main nav.  They need to be contained in one container so the formatting which is chared by both divs works.  class Navbar is a bootstrap class.  Expand lg means navbar horizontal when screen is large.  fixed top fixes the navbar to the top-->
       <div role="banner">
-
-
         <a class="skiptocontent" href="#maincontent">Skip to Content</a>
         <a class="navbar-brand mainlogo" href="index.html">AccessibilityWeb</a>
       </div>
@@ -36,7 +34,7 @@
           <a class="nav-link text-white" href="imagesandvideo.html">Images & Video</a> <!--text white colors text as white-->
         </li>
         <li class="nav-item"> <!--class Nav-item is a bootstrap class-->
-          <a class="nav-link text-white" href="forms.html">Forms</a> <!--text white colors text as white-->
+          <a class="nav-link text-white" href="widgets.html">Widgets</a> <!--text white colors text as white-->
         </li>
         <li class="nav-item"> <!--class Nav-item is a bootstrap class-->
           <a class="nav-link text-white" href="windows.html">Windows</a> <!--text white colors text as white-->
@@ -107,10 +105,10 @@
           <div class="col-lg-3">
             <div class="card">
               <div class="card-header">
-                <h2><a href="forms.html" class="headingLink">Forms</a></h2>
+                <h2><a href="widgets.html" class="headingLink">Widgets</a></h2>
               </div>
               <div class="card-body">
-                <a href="forms.html"><img src="images/Form.png" height="250px" width="300px" alt="forms"  /></a>
+                <a href="widgets.html"><img src="images/Form.png" height="250px" width="300px" alt="widgets"  /></a>
                 <p class="paragraphText">Inputting information into websites and accessibility.</p>
               </div>
             </div>
