--- a/focus.html
+++ b/focus.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><!--Link to the bootstrap cdn.  Don't forget you also need the javascript bootstrap-->
       <link rel="stylesheet" type="text/css" href="styles/styles.css">
       <link rel="icon" href="myFavicon.ico"/> <!--code to link to the favicon-->
-      <title>Web Focus - AccessiblityWeb</title>
+      <title>Focus - AccessiblityWeb</title>
   </head>
   <body>
 
@@ -76,7 +76,7 @@
              to navigate between them.
           </p>
           <h3 class="exampleMarginLeft">Example Items that Receive the Focus</h3>
-          <a href="#maincontent" class="exampleMarginLeft">Example Link - Goes to Top of page)</a><br />
+          <a href="#maincontent" class="exampleMarginLeft">Example Link - (Goes to Top of page)</a><br />
           <label for="exampleEditArea" class="exampleMarginLeft">Example Edit Area</label>
           <br /><!--To make the label  appear above  the edit area-->
           <textarea class="exampleMarginLeft" id="exampleEditArea" name="story"rows="5" cols="33">Type text here...
