--- a/standardPage.html
+++ b/standardPage.html
@@ -12,7 +12,7 @@
       <title>Standard Content Page - AccessiblityWeb</title>
   </head>
   <body>
-    <div class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"> <!--THis div contains both the banner and the main nav.  They need to be contained in one container so the formatting which is chared by both divs works.  class Navbar is a bootstrap class.  Expand lg means navbar horizontal when screen is large.  fixed top fixes the navbar to the top-->
+    <div class="navbar navbar-expand-xl navbar-dark bg-dark fixed-top"> <!--THis div contains both the banner and the main nav.  They need to be contained in one container so the formatting which is chared by both divs works.  class Navbar is a bootstrap class.  Expand lg means navbar horizontal when screen is large.  fixed top fixes the navbar to the top-->
       <div role="banner">
 
 
