--- a/widgets.html
+++ b/widgets.html
@@ -129,7 +129,13 @@
           <h3>Form Example</h3>
           <p>The example form below includes a text box for an email address and two fields for a password. This is typical of the kind of form used when signing up for a service. There are a number of criteria that must be met before the submitted data will be accepted. The email address must be a valid email address. The password must be at least 8 characters long, contain at least one number and one capital letter. The two passwords must match. The email address and both the password fields must be filled in. If any of fields are not filled in, or are filled in incorrectly, an error message will appear next to each field where there is a mistake. These error messages are announced to screen reader users as they appear. The error message will appear when the user presses the ‘Submit’ button. Try filling out the form incorrectly and correctly and seeing the results. Note that no actual data is stored by AccessibilityWeb.</p>
 
-      		<h3  class="exampleMarginLeft">Register for Service</h3>
+
+          <fieldset>
+
+
+      		<legend>
+
+          <h3  class="exampleMarginLeft">Register for Service</h3></legend>
       		<p class="exampleMarginLeft">Required field are marked with '*'.</p>
       		 <div id="formcontainer">
       			<form id="regsiterdetails" action="fma_t3confirm.html">
@@ -156,7 +162,7 @@
       				</div>
       			</form>
       		</div>
-
+        </fieldset>
       	</section>
 
 
